--- a/css/app.css
+++ b/css/app.css
@@ -48,7 +48,50 @@ table {
 
 /*
   ========================================
-  Grid of Two
+  header
   ========================================
 */
 
+.logo {
+    float: left;
+    
+}
+
+nav {
+    word-spacing: 20px;
+    text-align: right;
+    padding: 40px;
+}
+
+nav ul li {
+    display: inline-block;
+    
+}
+
+.mid-section {
+    padding-top: 200px;
+    text-align: center;
+}
+
+.mid-section h1{
+    font-size: 60px;
+    padding-bottom: 20px;
+}
+
+.btn {
+    background: #000;
+    border-radius: 15px;
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    font-weight: 400;
+    letter-spacing: .5px;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
+.btn-alt {
+    text-align: center;
+    border: 1px solid ;
+    padding: 10px 15px;
+}
