--- a/css/app.css
+++ b/css/app.css
@@ -51,6 +51,9 @@ table {
   header
   ========================================
 */
+.header{
+    height: 650px;
+}
 
 .logo {
     float: left;
@@ -169,4 +172,29 @@ nav ul li {
 	.col { 
 		margin: 1% 0 1% 0%;
 	}
+}
+
+.section {
+    background: #ddd;
+    text-align: center;
+}
+
+.section h2 {
+    font-size: 50px;
+    padding: 20px
+}
+
+.col {
+    text-align: center;
+    padding: 50px;
+}
+
+.col img {
+    width: 30%
+}
+
+.footer {
+    background-image: url('../images/footer.jpeg');
+    background-repeat: no-repeat; 
+    padding: 100px;
 }
