--- a/css/app.css
+++ b/css/app.css
@@ -197,4 +197,5 @@ nav ul li {
     background-image: url('../images/footer.jpeg');
     background-repeat: no-repeat; 
     padding: 100px;
+    text-align: center;
 }
